# Tg_agregator

./: .gitignore  README.md  bot.py  main.py  pyproject.toml  utils.py
backend/: Dockerfile  load_data.py  main.py  pyproject.toml
bot/: Dockerfile  bot.py  pyproject.toml
infra/: docker-compose.yml
