[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Дмитрий Спиряев <imwisagist@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.25.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
